Настройка кнопок EnvyBox

--- a/css/last.css
+++ b/css/last.css
@@ -615,3 +615,7 @@ body {
   text-decoration: none; 
   color: #fff !important;
 }
+
+a[href="#callbackwidget"] {
+  text-decoration: none !important;
+}
